force-app/sfpegCampaignUtility/objects/sfpegCampaignSettings__c/sfpegCampaignSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration of the Campaign and CampaignMember triggers provided by the PEG_APEX repository (sfpegApex-campaigns unlocked package)</description>
    <label>sfpegCampaignSettings</label>
</CustomObject>