force-app/sfpegCampaignUtility/objects/sfpegCampaignSettings__c/fields/BypassLogicCmStatusInit__c.field-meta.xml
<CustomField>
    <fullName>BypassLogicCmStatusInit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to bypass the Campaign CM Statuses initialization logic (Campaign after insert)</description>
    <inlineHelpText>Flag to bypass the Campaign CM Statuses initialization logic (Campaign after insert)</inlineHelpText>
    <label>Bypass Member Status Init?</label>
    <type>Checkbox</type>
</CustomField>