force-app/sfpegCampaignUtility/objects/sfpegCampaignSettings__c/fields/BypassLogicHierarchyPropag__c.field-meta.xml
<CustomField>
    <fullName>BypassLogicHierarchyPropag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to bypass the Campaign Hierarchy Propagation logic (Campaign before update)</description>
    <inlineHelpText>Flag to bypass the Campaign Hierarchy Propagation logic (Campaign before update)</inlineHelpText>
    <label>Bypass Hierarchy Propagation?</label>
    <type>Checkbox</type>
</CustomField>