force-app/sfpegCampaignUtility/objects/sfpegCampaignSettings__c/fields/BypassLogicMemberControl__c.field-meta.xml
<CustomField>
    <fullName>BypassLogicMemberControl__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to bypass the Campaign Member Tyoe Control logic (CampaignMember before insert)</description>
    <inlineHelpText>Flag to bypass the Campaign Member Tyoe Control logic (CampaignMember before insert)</inlineHelpText>
    <label>Bypass Member Controls?</label>
    <type>Checkbox</type>
</CustomField>