force-app/sfpegCampaignUtility/objects/sfpegCampaignSettings__c/fields/BypassTriggerCampaign__c.field-meta.xml
<CustomField>
    <fullName>BypassTriggerCampaign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to bypass all Campaign trigger logic</description>
    <inlineHelpText>Flag to bypass all Campaign trigger logic</inlineHelpText>
    <label>Bypass Trigger (Campaign) ?</label>
    <type>Checkbox</type>
</CustomField>