force-app/sfpegCampaignUtility/objects/sfpegCampaignSettings__c/fields/BypassTriggerCampaignMbr__c.field-meta.xml
<CustomField>
    <fullName>BypassTriggerCampaignMbr__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to bypass all Campaign Member trigger logic</description>
    <inlineHelpText>Flag to bypass all Campaign Member trigger logic</inlineHelpText>
    <label>Bypass Trigger (Campaign Member)?</label>
    <type>Checkbox</type>
</CustomField>